test/parser/should_fail/pragma3.souc.bad
import Directovis

;^} this is allowed
{^; but this is unclosed
main() = do
	x <- 42 ; a comment
	print x ;}
